# new

./: .gitignore  Dockerfile  README.md  docker-compose.traefik.yml  docker-compose.yml  new.json  pyproject.toml  requirements.txt  setup.cfg
backend/app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py
backend/app/endpoints/: auth.py  convert.py  users.py
backend/app/repository/: auth.py  users.py
backend/tests/: conftest.py  test_auth.py  test_convert.py
backend/tests/example/: sample.txt
